<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.MyProfileActivity">

    <TextView
        android:id="@+id/textViewTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/barlow_condensed_black"
        android:text="@string/app_name"
        android:textColor="@color/c1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/profileT1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle1"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle1" />

    <FrameLayout
        android:id="@+id/frameLayoutProfile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/round_background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle2">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/customer_logoImageViewProfile"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_splash"
            app:shapeAppearanceOverlay="@style/roundedImageView" />
    </FrameLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutProfile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_textInputLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="@color/c1"
                app:counterOverflowTextColor="@color/c1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customerEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:enabled="false"
                    android:fontFamily="@font/open_sans_bold"
                    android:hint="@string/email"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_textInputLayout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/c1"
                app:counterOverflowTextColor="@color/c1"
                app:layout_constraintEnd_toEndOf="@+id/customer_textInputLayout3"
                app:layout_constraintStart_toStartOf="@+id/customer_textInputLayout3"
                app:layout_constraintTop_toBottomOf="@+id/customer_textInputLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_profileMobileEditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:enabled="false"
                    android:fontFamily="@font/open_sans_bold"
                    android:hint="@string/mobile"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_textInputLayout6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/c1"
                app:counterOverflowTextColor="@color/c1"
                app:layout_constraintEnd_toEndOf="@+id/customer_textInputLayout4"
                app:layout_constraintStart_toStartOf="@+id/customer_textInputLayout4"
                app:layout_constraintTop_toBottomOf="@+id/customer_textInputLayout4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_profileFnameEditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:hint="@string/fName"
                    android:inputType="text|textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_textInputLayout7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/c1"
                app:counterOverflowTextColor="@color/c1"
                app:layout_constraintEnd_toEndOf="@+id/customer_textInputLayout6"
                app:layout_constraintStart_toStartOf="@+id/customer_textInputLayout6"
                app:layout_constraintTop_toBottomOf="@+id/customer_textInputLayout6">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_profileLnameEditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:hint="@string/lName"
                    android:inputType="text|textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/customer_updateProfileBtn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/c1"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/updatebtn1"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/customer_textInputLayout7"
                app:layout_constraintStart_toStartOf="@+id/customer_textInputLayout7"
                app:layout_constraintTop_toBottomOf="@+id/customer_textInputLayout7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>